--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
     <style name="button">
         <item name="android:layout_width">200dp</item>
         <item name="android:layout_height">70dp</item>
-        <item name="android:gravity">center</item>
-        <item name="android:text">@string/buttonText</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/white</item>
     </style>
 </resources>
